2003-07-06  Andreas Schwab  <schwab@suse.de>

	* m68klinux-nat.c (fill_fpregset): Fix use of loop index.

2003-07-04  Joel Brobecker  <brobecker@gnat.com>

	* rs6000-nat.c (vmap_symtab): Fix compilation error.

2003-07-04  Kris Warkentin  <kewarken@qnx.com>

	* config/i386/nto.mh: Set XM_FILE to xm-i386.h

2003-07-04  Kris Warkentin  <kewarken@qnx.com>

	* nto-procfs.c: New file.  Native procfs support for QNX Neutrino.
	* config/i386/nto.mh: New file.
	* config/i386/nm-nto.h: New file.
	* configure.host: Add i[3456]86-*-nto*.

2003-07-03  Joel Brobecker  <brobecker@gnat.com>

	* remote-vx.c (vx_add_symbols): Fix compilation error.

2003-07-03  Andrew Cagney  <cagney@redhat.com>

	* gdbarch.sh (REGISTER_NAME): Do not supply a default.
	* gdbarch.h, gdbarch.c: Re-generate.
	* config/sparc/tm-sparc.h (REGISTER_NAME): Define.
	(legacy_register_name): Declare.
	* config/sparc/tm-sp64.h (legacy_register_name): Declare.
	(REGISTER_NAME): Define.
	* sparc-tdep.c (legacy_register_name): New function.
	* config/pa/tm-hppa64.h (REGISTER_NAMES): Delete macro.
	(REGISTER_NAME): Define.
	(hppa64_register_name): Declare.
	* config/pa/tm-hppa.h (REGISTER_NAMES): Delete macro.
	* hppa-tdep.c (hppa_gdbarch_init): Set hppa_register_name.
	(hppa64_register_name): New function.
	(hppa_register_name): New function.
	* arch-utils.c (legacy_register_name): Delete.
	* arch-utils.h (legacy_register_name): Delete.

2003-07-03  Daniel Jacobowitz  <drow@mvista.com>

	* cli/cli-interp.c (cli_interpreter_resume): Update the
	cli_uiout's stream to gdb_stdout.

2003-07-03  Andrew Cagney  <cagney@redhat.com>

	* gdbarch.sh (REGISTER_RAW_SIZE, REGISTER_VIRTUAL_SIZE): Add
	predicate.
	* gdbarch.h, gdbarch.c: Re-generate.
	* regcache.c (init_regcache_descr): Use legacy code when either
	REGISTER_BYTE or REGISTER_RAW_SIZE is set.

2003-07-02  Daniel Jacobowitz  <drow@mvista.com>

	* NEWS: Move "set logging" entry into GDB 6.0 section.

2003-07-02  Jim Blandy  <jimb@redhat.com>
